# drone_onboard

./: CMakeLists.txt
KCF/: kcftracker.cpp  kcftracker.hpp  recttools.hpp
config/: camera_intrinsic.xml  config.yaml  config_desktop.yaml
include/: camera_node.hpp  const.hpp  control_node.hpp  control_sync.hpp  detector.hpp  hough.hpp  recv_node.hpp  send_node.hpp  struct.hpp  telem_async.hpp  topic.hpp  utils.hpp
src/: camera_node.cpp  control_node.cpp  control_sync.cpp  detector.cpp  hough.cpp  main.cpp  mission.cpp  recv_node.cpp  send_node.cpp  shared_ref.cpp  telem_async.cpp  utils.cpp
